--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,21 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<title>AirBnB clone</title>
-		<style>
+	  <title> AirBnB clone</title>
+	  <style>
+            body{
+	      margin:0px;
+	      padding:0px;
+	    }
+	    header{
+	      background-color:#FF0000;
+	      height:70px;
+	      width:100%;
+	    }
+	    footer{
+	      position:fixed;
+	      bottom:0;
+	      background-color:#00FF00;
+	      height:60px;
+	      width:100%;
+	    }
+	    p{
+	      text-align:center;
+	    }
 
-			body {margin:0px;padding:0px;}
-			header {background-color:#FF0000;height:70px;width:100%;}
-			footer {position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;}
-
-		</style>
+	  </style>
 	</head>
-    <body>
-		<header>
-		</header>
 
-		<footer>
-			<p>Holberton School</p>
-		</footer>
+	<body>
+	  <header>
+
+	  </header>
+
+
+	  <footer>
+	    <p> Holberton School </p>
+	  </footer>
+
 	</body>
 </html>
