--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<title>AirBnB clone</title>
+	  <title> AirBnB clone </title>
+	  <link href="styles/2-common.css" rel="stylesheet" type="text/css">
+	  <link href="styles/2-footer.css" rel="stylesheet" type="text/css">
+	  <link href="styles/2-header.css" rel="stylesheet" type="text/css">
 
-		<link rel="stylesheet" href="styles/2-common.css"/>
-		<link rel="stylesheet" href="styles/2-header.css"/>
-		<link rel="stylesheet" href="styles/2-footer.css"/>
 	</head>
-    <body>
-		<header>
-		</header>
 
-		<footer>
-			<p>Holberton School</p>
-		</footer>
+	<body>
+	  <header>
+
+	  </header>
+
+
+	  <footer>
+	    <p> Holberton School </p>
+	  </footer>
+
 	</body>
 </html>
