--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<title>AirBnB clone</title>
+	  <title>AirBnB clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+	  <link href="styles/3-common.css" rel="stylesheet" type="text/css">
+	  <link href="styles/3-footer.css" rel="stylesheet" type="text/css">
+	  <link href="styles/3-header.css" rel="stylesheet" type="text/css">
 
-		<link rel="stylesheet" href="styles/3-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
 	</head>
-    <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
 
-		<footer>
-			<p>Holberton School</p>
-		</footer>
+	<body>
+	<header>
+	<!--<img class="logo" src="images/logo.png"/>-->
+	</header>
+
+
+	  <footer>
+	    <p> Holberton School </p>
+	  </footer>
+
 	</body>
 </html>
