--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,26 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<title>AirBnB clone</title>
+	  <title> AirBnB clone </title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
-
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/4-filters.css"/>
+	  <link href="styles/4-common.css" rel="stylesheet" type="text/css">
+	  <link href="styles/3-footer.css" rel="stylesheet" type="text/css">
+	  <link href="styles/3-header.css" rel="stylesheet" type="text/css">
+	  <link href="styles/4-filters.css" rel="stylesheet" type="text/css">
 	</head>
-    <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
+
+	<body>
+	  <header>
+	  <!--<img class="logo" src="images/logo.png"/>-->
+	  </header>
+
+	  <div class="container">
+	    <section class="filters">
+	      <button> Search </button>
+
+	    </section>
+	  </div>
+
+	  <footer>
+	    <p> Holberton School </p>
+	  </footer>
+
 	</body>
 </html>
