--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,66 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<title>AirBnB clone</title>
+    <title> AirBnB clone </title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
-
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/7-places.css"/>
+		<link href="styles/4-common.css" rel="stylesheet" type="text/css">
+		<link href="styles/3-footer.css" rel="stylesheet" type="text/css">
+		<link href="styles/3-header.css" rel="stylesheet" type="text/css">
+		<link href="styles/6-filters.css" rel="stylesheet" type="text/css">
+		<link href="styles/7-places.css" rel="stylesheet" type="text/css">
 	</head>
-    <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
+
+	<body>
+    	<header>
+      	<!-- <img class="logo" src="images/logo.png"/>-->
+    	</header>
+
+
 		<div class="container">
 			<section class="filters">
-				<button>Search</button>
+				<button> Search </button>
+
 				<div class="locations">
-					<h3>States</h3>
-					<h4>California, Arizona...</h4>
+					<h3 class="_h3"> States </h3>
+					<h4> California, Arizona </h4>
+
+
 					<ul class="popover">
-						<li><h2>Arizona</h2>
-							<ul>
-								<li><h4>Page</h4></li>
-								<li><h4>Page2</h4></li>
-							</ul></li>
-						<li><h2>California</h2>
-							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
-							</ul></li>
+					<li><h2 class="_h2">California</h2></li>
+					<ul>
+					<li><h4>San francisco </h4></li>
+					<li><h4>Los altos</h4></li>
 					</ul>
+					<li><h2 class="_h2">Arizona</h2></li>
+					<ul>
+					<li><h4>space1</h4></li>
+					<li><h4>space2</h4></li>
+					</ul>
+					</ul>
+
 				</div>
 				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
+					<h3 class="_h3"> Amenities </h3>
+					<h4> Internet, kitchen </h4>
 					<ul class="popover">
-						<li><h4>Internet</h4></li>
-						<li><h4>TV</h4></li>
-						<li><h4>Kitchen</h4></li>
-						<li><h4>Iron</h4></li>
+
+						<li><h4 class="_h4">Internet</h4></li>
+						<li><h4 class="_h4">Tv</h4></li>
+						<li><h4 class="_h4">kitchen</h4></li>
+						<li><h4 class="_h4">Iron</h4></li>
+
 					</ul>
 				</div>
+			</section>
 
-			</section>
+			<!-- point7-->
+
 			<section class="places">
-				<h1>Places</h1>
+				<h1> Places </h1>
 				<article>
-					<h2>My home</h2>
+					<h2 class="_h2">My home</h2>
 				</article>
+
 				<article>
-					<h2>Tiny house</h2>
+					<h2 class="_h2">Tiny house</h2>
 				</article>
-				<article>
-					<h2>A suite</h2>
+
+				<article class="_article">
+					<h2 class="_h2">A suite</h2>
 				</article>
 			</section>
+
+
 		</div>
+
 		<footer>
-			<p>Holberton School</p>
+		<p> Holberton School </p>
 		</footer>
-	</body>
+
+  </body>
 </html>
